manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: back-svc
spec:
  selector:
     app: server
     tier: backend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: LoadBalancer
